--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "resolutions": {
     "path-parse": "1.0.7"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "node": "^20.1.0",
+    "yarn": "^1.22.19"
+  }
 }
